fix:添加模块框架

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,6 +251,9 @@ target_link_libraries(${PROJECT_NAME} PRIVATE my_arg_parser)
 target_link_libraries(${PROJECT_NAME} PRIVATE my_soft_healthy)
 target_link_libraries(${PROJECT_NAME} PRIVATE my_system_healthy)
 target_link_libraries(${PROJECT_NAME} PRIVATE my_heartbeat)
+target_link_libraries(${PROJECT_NAME} PRIVATE my_edge)
+target_link_libraries(${PROJECT_NAME} PRIVATE my_db)
+target_link_libraries(${PROJECT_NAME} PRIVATE my_cache)
 target_link_libraries(${PROJECT_NAME} PRIVATE mylib)
 # 链接 OpenCV 库
 target_link_libraries(${PROJECT_NAME} PRIVATE opencv_calib3d)
@@ -278,6 +281,9 @@ target_link_libraries(${PROJECT_NAME} PRIVATE symengine)
 add_dependencies(mylog spdlog::spdlog)
 add_dependencies(mylib mylog)
 add_dependencies(mylib my_heartbeat)
+add_dependencies(mylib my_edge)
+add_dependencies(mylib my_db)
+add_dependencies(mylib my_cache)
 add_dependencies(mylib myconfig)
 add_dependencies(mylib myproto)
 add_dependencies(mylib my_soft_healthy)
