--- a/config/config.ini
+++ b/config/config.ini
@@ -6,6 +6,7 @@ ujh = 123
 #define FAST_CPP_SERVER_MY_YAML_CONFIG_H
 asd = 123
 
-; logger_dir = "/var/log/fast_cpp_server/logs/"
+logger_dir = "/var/log/fast_cpp_server/logs/"
 app_name = "fast_cpp_server"
-logger_dir = "/workspace/fast_cpp_server/logs"
+# logger_dir = "/workspace/fast_cpp_server/logs"
+config_dir = "/etc/fast_cpp_server/config/"
