--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,8 @@ file(GLOB_RECURSE MYLIB_SOURCES
     ${PROJECT_SOURCE_DIR}/src/tools/example/*.cpp
     ${PROJECT_SOURCE_DIR}/src/tools/monitor/device_online_monitor/*.cpp
     ${PROJECT_SOURCE_DIR}/src/tools/thread_safe_queue/*.cpp
+    ${PROJECT_SOURCE_DIR}/src/tools/init_tools/*.cpp
+    ${PROJECT_SOURCE_DIR}/src/tools/free_func/*.cpp
 )
 
 # 创建静态库 mylib
@@ -23,6 +25,8 @@ set(MYLIB_INCLUDE_DIRECTORIES
     ${PROJECT_SOURCE_DIR}/src/tools/example
     ${PROJECT_SOURCE_DIR}/src/tools/monitor/device_online_monitor
     ${PROJECT_SOURCE_DIR}/src/tools/thread_safe_queue
+    ${PROJECT_SOURCE_DIR}/src/tools/init_tools
+    ${PROJECT_SOURCE_DIR}/src/tools/free_func
 )
 
 # 头文件路径
