fix:添加模块框架

--- a/config/config.json
+++ b/config/config.json
@@ -1,47 +1,110 @@
 {
-"server": { "host": "localhost", "port": 9999 },
-"logging": { "file": "test.log", "level": "info" },
-"my_log_config": { "file_path": "test.log", "level": "info" },
-"A": {"B": {"c": 1}},
-"pipeline": {
+    "server": {
+        "host": "localhost",
+        "port": 9999
+    },
+    "logging": {
+        "file": "test.log",
+        "level": "info"
+    },
+    "my_log_config": {
+        "file_path": "test.log",
+        "level": "info"
+    },
+    "A": {
+        "B": {
+            "c": 1
+        }
+    },
     "pipeline": {
-    "execute_node_number": 3,
-    "executes": {
-        "0": {
-        "model_args": {
-            "interval_sec_": 3
-        },
-        "model_name": "heartbeat"
-        },
-        "1": {
-        "model_args": {
-            "interval_sec_": 3
-        },
-        "model_name": "comm"
-        },
-        "2": {
-        "model_args": {
-            "interval_sec_": 3
-        },
-        "model_name": "system_healthy"
-        },
-        "3": {
-        "model_args": {
-            "edges": {
-            "1": {
-                "interface": "/getData",
-                "ip": "127.0.0.1",
-                "name": "wind",
-                "port": 2000
-            }
+        "execute_node_number": 3,
+        "executes": {
+            "0": {
+                "model_args": {
+                    "interval_sec_": 3
+                },
+                "model_name": "heartbeat",
+                "step_time_interval": 2
             },
-            "edges_number": 1,
-            "interval_sec_": 3
-        },
-        "model_name": "system_healthy"
+            "1": {
+                "model_args": {
+                    "interval_sec_": 3
+                },
+                "model_name": "comm"
+            },
+            "2": {
+                "model_args": {
+                    "interval_sec_": 3
+                },
+                "model_name": "system_healthy",
+                "step_time_interval": 5
+            },
+            "3": {
+                "model_args": {
+                    "edges": {
+                        "0": {
+                            "ip": "127.0.0.1",
+                            "name": "wind",
+                            "port": 2000,
+                            "actions": {
+                                "getData": {
+                                    "interface": "/getData"
+                                }
+                            }
+                        },
+                        "1":{
+                            
+                            "ip": "127.0.0.1",
+                            "name": "solar",
+                            "port": 3000,
+                            "actions": {
+                                "getData": {
+                                    "interface": "/getData"
+                                },
+                                "download": {
+                                    "interface": "/download"
+                                },
+                                "upload": {
+                                    "interface": "/upload"
+                                }
+                            }
+                        },
+                        "2": {
+                            "ip": "127.0.0.1",
+                            "name": "robot_001",
+                            "port": 2000,
+                            "actions": {
+                                "getData": {
+                                    "interface": "/getData"
+                                }
+                            }
+                        },
+                        "3": {
+                            "ip": "127.0.0.1",
+                            "name": "robot_002",
+                            "port": 2000,
+                            "actions": {
+                                "getData": {
+                                    "interface": "/getData"
+                                }
+                            }
+                        },
+                        "4": {
+                            "ip": "127.0.0.1",
+                            "name": "rebot_003",
+                            "port": 2000,
+                            "actions": {
+                                "getData": {
+                                    "interface": "/getData"
+                                }
+                            }
+                        }
+                    },
+                    "edges_number": 5,
+                    "interval_sec_": 3
+                },
+                "model_name": "edge_monitor"
+            }
         }
     }
-    }
-}
-
 }
