--- a/src/util/my_heartbeat/CMakeLists.txt
+++ b/src/util/my_heartbeat/CMakeLists.txt
@@ -22,6 +22,7 @@ if (BUILD_MY_HEARTBEAT)
     target_link_libraries(my_heartbeat PUBLIC pthread)
     target_link_libraries(my_heartbeat PUBLIC mylog)
     target_link_libraries(my_heartbeat PUBLIC myconfig)
+    target_link_libraries(my_heartbeat PUBLIC my_edge)
     print_colored_message("Building my_heartbeat library over." COLOR yellow)
     print_colored_message("------------------------------" COLOR magenta)
 else()
